--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Software Engineer Portfolio</title>
   <base href="/">
   <meta name="viewport"
         content="width=device-width, initial-scale=1">
   <link rel="icon"
         type="image/x-icon"
         href="favicon.ico">
+  <meta name="description"
+        content="I'm a Software Engineer from Ukraine. I create applications and try to make peoples life easier. Today i'm a student of Masters degree Computer Engineering.">
+  </meta>
+  <meta name="keywords"
+        content="Html, css, js, javaScript, java, portfolio, Software, Engineer, Node, Angular, web, developer, student, bachelor, master, Ukraine, applications, apps">
+  <meta name="author"
+        content="Vitalii Lynnyk">
+  </meta>
 </head>
 
 <body>
